# RunOnEnd

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  RunOnEnd.sln  azure-pipelines.yml  project-base.json
.github/workflows/: cmake.yml
include/siddiqsoft/: RunOnEnd.hpp
nuget/: SiddiqSoft.RunOnEnd.nuspec
pack/: CMakeCommonHelpers.cmake
src/: CMakeLists.txt  RunOnEnd.hpp
tests/: CMakeLists.txt  basic_tests.vcxproj  test.cpp
